--- a/EldoradoWebApi/EldoradoWebApi.csproj
+++ b/EldoradoWebApi/EldoradoWebApi.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Coupons\" />
+    <Folder Include="Models\Statuses\" />
+  </ItemGroup>
+
 </Project>
