Added Tag Service, Controller and Models.

--- a/EldoradoWebApi/EldoradoWebApi.csproj
+++ b/EldoradoWebApi/EldoradoWebApi.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Models\Coupons\" />
+    <Folder Include="Models\Tags\" />
     <Folder Include="Models\Statuses\" />
   </ItemGroup>
 
