Added Azure AD B2C Authentication.

--- a/EldoradoWebApi/appsettings.json
+++ b/EldoradoWebApi/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:eldoradodb.database.windows.net,1433;Initial Catalog=EldoradoProducts;Persist Security Info=False;User ID=admin123;Password=BytMig123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "AzureAdB2C": {
+    "Instance": "https://azureADTomMastery.b2clogin.com",
+    "ClientId": "e0182b12-fb9c-4922-960c-81136cdd66b8",
+    "Domain": "azureADTomMastery.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_SignIn_Up"
   }
 }
